--- a/reactive-form/package.json
+++ b/reactive-form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "observables",
+  "name": "reactive-form",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,7 +20,6 @@
     "@angular/router": "~12.1.0-",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
-    "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
